--- a/sites-available/erisa.cloud.conf
+++ b/sites-available/erisa.cloud.conf
@@ -25,9 +25,9 @@ server {
   listen 443;
   listen [::]:443;
   
-  include /etc/nginx/reject_denied.conf;
-  include /etc/nginx/banlist.conf;
-  include /etc/nginx/torlist.conf;
+  include confs/reject_denied.conf;
+  include confs/banlist.conf;
+  include confs/torlist.conf;
   
   proxy_set_header X-Forwarded-For $remote_addr;
 
