--- a/sites-available/paste.erisa.moe.conf
+++ b/sites-available/paste.erisa.moe.conf
@@ -35,6 +35,6 @@ server {
   # ssl_certificate /etc/letsencrypt/live/paste.erisa.moe/fullchain.pem; # managed by Certbot
   # ssl_certificate_key /etc/letsencrypt/live/paste.erisa.moe/privkey.pem; # managed by Certbot
   ssl_certificate certs/cloudflare_moe.cert;
-  ssl_certificate_key certs/cloudflare_moe.key;
+  ssl_certificate_key keys/cloudflare_moe.key;
 }
 
