--- a/sites-available/001-rejectunknown.conf
+++ b/sites-available/001-rejectunknown.conf
@@ -8,8 +8,8 @@ server {
   listen 443 default_server ssl;
   
   # Invalid cert, doesn't matter.
-  ssl_certificate /etc/nginx/localhost.cert;
-  ssl_certificate_key /etc/nginx/localhost.key;
+  ssl_certificate certs/localhost.cert;
+  ssl_certificate_key keys/localhost.key;
   
   # Drop the bass!
   return 444;
