--- a/sites-available/cloud.erisa.moe.conf
+++ b/sites-available/cloud.erisa.moe.conf
@@ -7,6 +7,6 @@ server {
   server_name cloud.erisa.moe;
   return 301 https://erisa.cloud$request_uri;
   
-  ssl_certificate /etc/nginx/cloudflare_moe.cert;
-  ssl_certificate_key /etc/nginx/cloudflare_moe.key;
+  ssl_certificate certs/cloudflare_moe.cert;
+  ssl_certificate_key keys/cloudflare_moe.key;
 }
