--- a/sites-available/git.erisa.moe.conf
+++ b/sites-available/git.erisa.moe.conf
@@ -32,7 +32,7 @@
 server {
     listen 443 ssl;
     listen [::]:443 ssl;
-    include /etc/nginx/cloudflare-allow.conf;
+    include confs/cloudflare-allow.conf;
     # include /etc/nginx/tor_reject.conf
     server_name git.erisa.moe;
     #Headers
@@ -51,7 +51,7 @@ if ($server_port = 80) {
         proxy_pass_header X-Transmission-Session-Id;
     }
 
-    ssl_certificate /etc/nginx/cloudflare.cert;
-    ssl_certificate_key /etc/nginx/cloudflare.key; # managed by Certbot
+    ssl_certificate certs/cloudflare.cert;
+    ssl_certificate_key keys/cloudflare.key; # managed by Certbot
 }
 
