--- a/sites-available/git.erisa.moe.conf
+++ b/sites-available/git.erisa.moe.conf
@@ -1,57 +1,32 @@
-#server {
-#    include /etc/nginx/cloudflare-allow.conf;
-#    if ($host = git.erisa.moe) {
-#        return 301 https://$host$request_uri;
-#    } # managed by Certbot
-#
-#    if ($host != git.erisa.moe) {
-#        return 444;
-#    }
-
-
-#    listen 80;
-#    listen [::]:80;
-#    server_name git.erisa.moe;
-
-    #Headers
-#    add_header X-Content-Type-Options nosniff;
-#    add_header X-Frame-Options "SAMEORIGIN";
-#    add_header X-Robots-Tag none;
-
-#    location / {
-#        proxy_pass http://127.0.0.1:3000/;
-#        proxy_set_header Connection "";
-#        proxy_set_header Host $host;
-#        proxy_set_header X-Real-IP $remote_addr;
-#        proxy_pass_header X-Transmission-Session-Id;
-#    }
-
-
-#}
-
 server {
-    listen 443 ssl;
-    listen [::]:443 ssl;
-    include confs/cloudflare-allow.conf;
-    # include /etc/nginx/tor_reject.conf
-    server_name git.erisa.moe;
-    #Headers
-    add_header X-Content-Type-Options nosniff;
-    add_header X-Frame-Options "SAMEORIGIN";
-    add_header X-Robots-Tag none;
+  # http
+  listen 80;
+  listen [::]:80;
+  
+  # https
+  listen 443 ssl;
+  listen [::]:443 ssl;
+  ssl_certificate certs/cloudflare_moe.cert;
+  ssl_certificate_key keys/cloudflare_moe.key;
+  
+  include confs/cloudflare_only.conf;
 
-    location / {
-  if ($server_port = 80) {
-         return 301 https://$host$request_uri;
-      }
-      proxy_pass http://127.0.0.1:3000/;
-      proxy_set_header Connection "";
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_pass_header X-Transmission-Session-Id;
+  server_name git.erisa.moe;
+  
+  #Headers
+  add_header X-Content-Type-Options nosniff;
+  add_header X-Frame-Options "SAMEORIGIN";
+  add_header X-Robots-Tag none;
+
+  location / {
+    if ($server_port = 80) {
+       return 301 https://$host$request_uri;
     }
-
-    ssl_certificate certs/cloudflare.cert;
-    ssl_certificate_key keys/cloudflare.key; # managed by Certbot
+    proxy_pass http://127.0.0.1:3000/;
+    proxy_set_header Connection "";
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_pass_header X-Transmission-Session-Id;
+  }
 }
 
