--- a/sites-available/link.erisa.moe.conf
+++ b/sites-available/link.erisa.moe.conf
@@ -1,31 +1,41 @@
 server {
 
-  # HTTP over IPv4 & IPv6
+  # http
   listen 80;
   listen [::]:80;
 
-  # HTTPS over IPv4 & IPv6
-  # MUST BE EDITED TO REFLECT YOUR CONFIGURATION
-  #listen 443 ssl;
-  #listen [::]:443 ssl;
-  #ssl_certificate     example.com.crt;
-  #ssl_certificate_key example.com.key;
+  # https
+  listen 443 ssl;
+  listen [::]:443 ssl;
+  
+  ssl_certificate certs/cloudflare_moe.cert;
+  ssl_certificate_key keys/cloudflare_moe.key;
 
   # Server names
   # MUST BE EDITED TO REFLECT YOUR CONFIGURATION
   server_name link.erisa.moe;
-
+  
+  include confs/cloudflare_only.conf;
+  
   # Root directory
   # MUST BE EDITED TO REFLECT YOUR CONFIGURATION
   root /var/www/yourls;
 
   # Rewrites
   location / {
+    if ($server_port = 80) {
+      return 301 https://$host$request_uri;
+    }
+    
     try_files $uri $uri/ /yourls-loader.php$is_args$args;
   }
 
   # PHP engine
   location ~ \.php$ {
+    if ($server_port = 80) {
+      return 301 https://$host$request_uri;
+    }
+    
     include fastcgi.conf;
     # OR
     # include fastcgi_params;
