--- a/sites-available/wp.erisa.moe.conf
+++ b/sites-available/wp.erisa.moe.conf
@@ -1,39 +1,45 @@
 server {
-server_name wp.erisa.moe www.wp.erisa.moe;
+server_name wp.erisa.moe;
+  # http
+  listen 80;
+  listen [::]:80;
+  
+  # https
+  listen 443 ssl;
+  listen {::]:443 ssl;
+  ssl_certificate certs/cloudflare_moe.cert
+  ssl_certificate_key keys/cloudflare_moe.key
+  
+  include confs/cloudflare_only.conf;
 
-root /var/www/wordpress/public;
-index index.php;
+  root /var/www/wordpress/public;
+  index index.php;
 
-access_log /var/www/wordpress/logs/access.log;
-error_log /var/www/wordpress/logs/error.log;
+  access_log /var/www/wordpress/logs/access.log;
+  error_log /var/www/wordpress/logs/error.log;
 
-location / {
-try_files $uri $uri/ /index.php?$args;
-}
+  location / {
+    if (server_port = 80) {
+      return 301 https://$host:$request_uri;
+    }
+    
+    try_files $uri $uri/ /index.php?$args;
+  }
 
-location ~ \.php$ {
-include snippets/fastcgi-php.conf;
-fastcgi_pass unix:/run/php/php7.2-fpm.sock;
-}
+  location ~ \.php$ {
+    if (server_port = 80) {
+      return 301 https://$host:$request_uri;
+    }
+    
+    include snippets/fastcgi-php.conf;
+    fastcgi_pass unix:/run/php/php7.2-fpm.sock;
+  }
 
-    listen [::]:443 ssl; # managed by Certbot
-    listen 443 ssl; # managed by Certbot
-    ssl_certificate /etc/letsencrypt/live/wp.erisa.moe/fullchain.pem; # managed by Certbot
-    ssl_certificate_key /etc/letsencrypt/live/wp.erisa.moe/privkey.pem; # managed by Certbot
-    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
-    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
-
-}
-server {
-    if ($host = wp.erisa.moe) {
-        return 301 https://$host$request_uri;
-    } # managed by Certbot
-
-
-listen 80;
-listen [::]:80;
-server_name wp.erisa.moe www.wp.erisa.moe;
-    return 404; # managed by Certbot
-
+  # listen [::]:443 ssl; # managed by Certbot
+  # listen 443 ssl; # managed by Certbot
+  # ssl_certificate /etc/letsencrypt/live/wp.erisa.moe/fullchain.pem; # managed by Certbot
+  # ssl_certificate_key /etc/letsencrypt/live/wp.erisa.moe/privkey.pem; # managed by Certbot
+  # include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+  # ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
 
 }
