Fix formatting on wp.erisa.moe

--- a/sites-available/wp.erisa.moe.conf
+++ b/sites-available/wp.erisa.moe.conf
@@ -1,5 +1,4 @@
 server {
-server_name wp.erisa.moe;
   # http
   listen 80;
   listen [::]:80;
@@ -7,8 +6,10 @@ server_name wp.erisa.moe;
   # https
   listen 443 ssl;
   listen {::]:443 ssl;
-  ssl_certificate certs/cloudflare_moe.cert
-  ssl_certificate_key keys/cloudflare_moe.key
+  ssl_certificate certs/cloudflare_moe.cert;
+  ssl_certificate_key keys/cloudflare_moe.key;
+  
+  server_name wp.erisa.moe;
   
   include confs/cloudflare_only.conf;
 
