Fix error on wp.erisa.moe

--- a/sites-available/wp.erisa.moe.conf
+++ b/sites-available/wp.erisa.moe.conf
@@ -5,7 +5,7 @@ server {
   
   # https
   listen 443 ssl;
-  listen {::]:443 ssl;
+  listen [::]:443 ssl;
   ssl_certificate certs/cloudflare_moe.cert;
   ssl_certificate_key keys/cloudflare_moe.key;
   
