--- a/sites-available/wp.erisa.moe.conf
+++ b/sites-available/wp.erisa.moe.conf
@@ -20,7 +20,7 @@ server {
   error_log /var/www/wordpress/logs/error.log;
 
   location / {
-    if (server_port = 80) {
+    if ($server_port = 80) {
       return 301 https://$host:$request_uri;
     }
     
