--- a/sites-available/wp.erisa.moe.conf
+++ b/sites-available/wp.erisa.moe.conf
@@ -28,7 +28,7 @@ server {
   }
 
   location ~ \.php$ {
-    if (server_port = 80) {
+    if ($server_port = 80) {
       return 301 https://$host:$request_uri;
     }
     
