--- a/confs/banlist.conf
+++ b/confs/banlist.conf
@@ -1,3 +1,7 @@
+# These are IPs which have exhibited malicious or shady behaviours againt my websites.
+# I have no problems with the list being public because they shouldn't be doing malicious
+#   things in the first place, and perhaps somebody might make use of the list.
+# PRs to add common malicious IPs will NOT be accepted, this list is only for personal offenders.
 deny 60.191.38.77;
 deny 46.165.245.154;
 deny 222.94.195.156;
