--- a/sites-available/cloud.erisa.moe.conf
+++ b/sites-available/cloud.erisa.moe.conf
@@ -5,7 +5,13 @@ server {
   listen [::]:443 ssl;
 
   server_name cloud.erisa.moe;
-  return 301 https://erisa.cloud$request_uri;
+  
+  include confs/reject_denied.conf;
+  include confs/cloudflare_only.conf;
+  
+  location / {
+    return 301 https://erisa.cloud$request_uri;
+  }
   
   ssl_certificate certs/cloudflare_moe.cert;
   ssl_certificate_key keys/cloudflare_moe.key;
