--- a/sites-available/git.erisa.moe.conf
+++ b/sites-available/git.erisa.moe.conf
@@ -9,6 +9,7 @@ server {
   ssl_certificate certs/cloudflare_moe.cert;
   ssl_certificate_key keys/cloudflare_moe.key;
   
+  include confs/reject_denied.conf;
   include confs/cloudflare_only.conf;
 
   server_name git.erisa.moe;
