--- a/sites-available/i.fl0.co.conf
+++ b/sites-available/i.fl0.co.conf
@@ -5,8 +5,8 @@ server {
   listen [::]:80;
   
   # https
-  listen 443;
-  listen [::]443;
+  listen 443 ssl;
+  listen [::]443 ssl;
   ssl_certificate certs/cloudflare_fl0.cert;
   ssl_certificate_key keys/cloudflare_fl0.key;
   
