--- a/sites-available/fl0.co.conf
+++ b/sites-available/fl0.co.conf
@@ -10,7 +10,7 @@ server {
   ssl_certificate certs/cloudflare_fl0.cert;
   ssl_certificate_key keys/cloudflare_fl0.key;
 
-  server_name cloud.erisa.moe;
+  server_name fl0.co;
   
   include confs/reject_denied.conf;
   include confs/cloudflare_only.conf;
@@ -20,3 +20,4 @@ server {
   }
 
 }
+
