--- a/sites-available/i.fl0.co.conf
+++ b/sites-available/i.fl0.co.conf
@@ -10,6 +10,8 @@ server {
   ssl_certificate certs/cloudflare_fl0.cert;
   ssl_certificate_key keys/cloudflare_fl0.key;
   
+  server_name i.fl0.co;
+  
   include confs/reject_denied.conf;
   include confs/cloudflare_only.conf;
   
