--- a/sites-available/i.fl0.co.conf
+++ b/sites-available/i.fl0.co.conf
@@ -6,7 +6,7 @@ server {
   
   # https
   listen 443 ssl;
-  listen [::]443 ssl;
+  listen [::]:443 ssl;
   ssl_certificate certs/cloudflare_fl0.cert;
   ssl_certificate_key keys/cloudflare_fl0.key;
   
@@ -16,7 +16,7 @@ server {
   include confs/cloudflare_only.conf;
   
   location / {
-    root /var/www/i.fl0.co/
+    root /var/www/i.fl0.co;
   }
   
 }
