--- a/sites-available/awau.uk.conf
+++ b/sites-available/awau.uk.conf
@@ -74,24 +74,24 @@ server {
         proxy_set_header Connection "upgrade";
         proxy_set_header Host $http_host;
 
-        proxy_pass http://localhost:4000;
+        proxy_pass http://127.0.0.1:9001;
 
         client_max_body_size 16m;
     }
 
-    location ~ ^/(media|proxy) {
-        proxy_cache pleroma_media_cache;
-        slice              1m;
-        proxy_cache_key    $host$uri$is_args$args$slice_range;
-        proxy_set_header   Range $slice_range;
-        proxy_http_version 1.1;
-        proxy_cache_valid  200 206 301 304 1h;
-        proxy_cache_lock on;
-        proxy_ignore_client_abort on;
-        proxy_buffering on;
-        chunked_transfer_encoding on;
-        proxy_ignore_headers Cache-Control;
-        proxy_hide_header Cache-Control;
-        proxy_pass http://localhost:9001;
-    }
+#    location ~ ^/(media|proxy) {
+#        proxy_cache pleroma_media_cache;
+#        slice              1m;
+#        proxy_cache_key    $host$uri$is_args$args$slice_range;
+#        proxy_set_header   Range $slice_range;
+#        proxy_http_version 1.1;
+#        proxy_cache_valid  200 206 301 304 1h;
+#        proxy_cache_lock on;
+#        proxy_ignore_client_abort on;
+#        proxy_buffering on;
+#        chunked_transfer_encoding on;
+#        proxy_ignore_headers Cache-Control;
+#        proxy_hide_header Cache-Control;
+#        proxy_pass http://127.0.0.1:4000;
+#    }
 }
