--- a/sites-available/i.fl0.co.conf
+++ b/sites-available/i.fl0.co.conf
@@ -14,9 +14,10 @@ server {
   
   include confs/reject_denied.conf;
   include confs/cloudflare_only.conf;
-  
+    
   location / {
     root /var/www/i.fl0.co;
+    error_page   404  =  /404.html;
   }
   
 }
