--- a/sites-available/link.erisa.moe.conf
+++ b/sites-available/link.erisa.moe.conf
@@ -3,47 +3,21 @@ server {
   # http
   listen 80;
   listen [::]:80;
-
+  
   # https
   listen 443 ssl;
   listen [::]:443 ssl;
-  
   ssl_certificate certs/cloudflare_moe.cert;
   ssl_certificate_key keys/cloudflare_moe.key;
 
-  # Server names
-  # MUST BE EDITED TO REFLECT YOUR CONFIGURATION
   server_name link.erisa.moe;
   
+  include confs/reject_denied.conf;
   include confs/cloudflare_only.conf;
   
-  # Root directory
-  # MUST BE EDITED TO REFLECT YOUR CONFIGURATION
-  root /var/www/yourls;
-
-  # Rewrites
   location / {
-    if ($server_port = 80) {
-      return 301 https://$host$request_uri;
-    }
-    
-    try_files $uri $uri/ /yourls-loader.php$is_args$args;
-  }
-
-  # PHP engine
-  location ~ \.php$ {
-    if ($server_port = 80) {
-      return 301 https://$host$request_uri;
-    }
-    
-    include fastcgi.conf;
-    # OR
-    # include fastcgi_params;
-    
-    fastcgi_index index.php;
-    
-    # MUST BE EDITED TO REFLECT YOUR CONFIGURATION
-    fastcgi_pass unix:/var/run/php/php7.2-fpm.sock;
+    return 301 https://erisa.link$request_uri;
   }
 
 }
+
