Fix erisa.link Reject denied clients.

--- a/sites-available/erisa.link.conf
+++ b/sites-available/erisa.link.conf
@@ -16,7 +16,8 @@ server {
   # Server names
   # MUST BE EDITED TO REFLECT YOUR CONFIGURATION
   server_name erisa.link;
-  
+
+  include confgs/reject_denied.conf  
   include confs/cloudflare_only.conf;
   
   # Root directory
