Fix erisa.link - Missing semicolon - Type {confgs => confs}

--- a/sites-available/erisa.link.conf
+++ b/sites-available/erisa.link.conf
@@ -17,7 +17,7 @@ server {
   # MUST BE EDITED TO REFLECT YOUR CONFIGURATION
   server_name erisa.link;
 
-  include confgs/reject_denied.conf  
+  include confs/reject_denied.conf;
   include confs/cloudflare_only.conf;
   
   # Root directory
