--- a/confs/banlist.conf
+++ b/confs/banlist.conf
@@ -2,6 +2,16 @@
 # I have no problems with the list being public because they shouldn't be doing malicious
 #   things in the first place, and perhaps somebody might make use of the list.
 # PRs to add common malicious IPs will NOT be accepted, this list is only for personal offenders.
+
+# Spam requests.
 deny 60.191.38.77;
 deny 46.165.245.154;
 deny 222.94.195.156;
+
+# Port scanning/malicious login attacks.
+deny 176.214.5.190;
+deny 94.228.207.169;
+deny 84.22.137.57;
+
+# Failed XSS attempts.
+deny 112.245.184.41;
