Add www redirect to erisa.moe

--- a/sites-available/erisa.moe.conf
+++ b/sites-available/erisa.moe.conf
@@ -28,3 +28,32 @@ server {
   }
   
 }
+
+server {
+
+  # http
+  listen 80;
+  listen [::]:80;
+
+  # https
+  listen 443 ssl;
+  listen [::]:443 ssl;
+  ssl_certificate certs/cloudflare_moe.cert;
+  ssl_certificate_key keys/cloudflare_moe.key;
+
+  server_name www.erisa.moe;
+
+  include confs/reject_denied.conf;
+  include confs/cloudflare_only.conf;
+
+  # types {
+  #   text/plain        md;
+  # }
+
+  location / {
+    return 301 https://erisa.moe/
+  }
+
+  location /.git/ {
+   # Do nothing.                                                                                                                                                                                                                               }                                                                                                                                                                                                                                          
+}
