--- a/sites-available/erisa.moe.conf
+++ b/sites-available/erisa.moe.conf
@@ -51,9 +51,7 @@ server {
   # }
 
   location / {
-    return 301 https://erisa.moe/
+    return 301 https://erisa.moe/;
   }
-
-  location /.git/ {
-   # Do nothing.                                                                                                                                                                                                                               }                                                                                                                                                                                                                                          
+                                                                                                                                                                 
 }
