--- a/confs/banlist.conf
+++ b/confs/banlist.conf
@@ -12,6 +12,7 @@ deny 222.94.195.156;
 deny 176.214.5.190;
 deny 94.228.207.169;
 deny 84.22.137.57;
+deny 119.29.78.205;
 
 # Failed XSS attempts.
 deny 112.245.184.41;
