--- a/sites-available/awau.uk.conf
+++ b/sites-available/awau.uk.conf
@@ -5,7 +5,7 @@ server {
     listen [::]:80;
     # https
     listen 443 ssl;
-    listen [::]:443
+    listen [::]:443;
     
     ssl_certificate certs/cloudflare_awau.cert;
     ssl_certificate_key keys/cloudflare_awau.key;
@@ -24,7 +24,7 @@ server {
 
     # https
     listen 443 ssl;
-    listen [::]:443
+    listen [::]:443;
     
     ssl_certificate certs/cloudflare_awau.cert;
     ssl_certificate_key keys/cloudflare_awau.key;
@@ -38,7 +38,7 @@ server {
 
     # https
     listen 443 ssl;
-    listen [::]:443
+    listen [::]:443;
     
     ssl_certificate certs/cloudflare_awau.cert;
     ssl_certificate_key keys/cloudflare_awau.key;
@@ -52,7 +52,7 @@ server {
 
     # https
     listen 443 ssl;
-    listen [::]:443
+    listen [::]:443;
     
     ssl_certificate certs/cloudflare_awau.cert;
     ssl_certificate_key keys/cloudflare_awau.key;
@@ -72,7 +72,7 @@ server {
 
     # https
     listen 443 ssl;
-    listen [::]:443
+    listen [::]:443;
     
     ssl_certificate certs/cloudflare_awau.cert;
     ssl_certificate_key keys/cloudflare_awau.key;
@@ -98,7 +98,7 @@ server {
     
     # https
     listen 443 ssl;
-    listen [::]:443
+    listen [::]:443;
     
     ssl_certificate certs/cloudflare_awau.cert;
     ssl_certificate_key keys/cloudflare_awau.key;
