--- a/confs/banlist.conf
+++ b/confs/banlist.conf
@@ -8,6 +8,9 @@ deny 60.191.38.77;
 deny 46.165.245.154;
 deny 222.94.195.156;
 
+# DDOS
+deny 185.101.33.136;
+
 # Port scanning/malicious login attacks.
 deny 176.214.5.190;
 deny 94.228.207.169;
