Deprecate git.erisa.moe

--- a/sites-available/git.erisa.moe.conf
+++ b/sites-available/git.erisa.moe.conf
@@ -16,13 +16,9 @@ server {
   add_header X-Content-Type-Options nosniff;
   add_header X-Frame-Options "SAMEORIGIN";
   add_header X-Robots-Tag none;
-
+  
   location / {
-    proxy_pass http://127.0.0.1:3000/;
-    proxy_set_header Connection "";
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_pass_header X-Transmission-Session-Id;
+    return 301 https://erisa.link$request_uri;
   }
 }
 
