--- a/sites-available/relay.erisa.moe.conf
+++ b/sites-available/relay.erisa.moe.conf
@@ -11,12 +11,9 @@ server {
   add_header X-Robots-Tag none;
 
   location / {
-    proxy_pass http://127.0.0.1:5555/;
-    proxy_set_header Connection "";
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_pass_header X-Transmission-Session-Id;
+    return 301 https://erisa.link$request_uri;
   }
+  
   ssl_certificate certs/cloudflare_moe.cert; # managed by Certbot
   ssl_certificate_key keys/cloudflare_moe.key; # managed by Certbot
 
