--- a/sites-available/relay.erisa.moe.conf
+++ b/sites-available/relay.erisa.moe.conf
@@ -11,7 +11,7 @@ server {
   add_header X-Robots-Tag none;
 
   location / {
-    return 301 https://erisa.link$request_uri;
+    return 301 https://erisa.moe$request_uri;
   }
   
   ssl_certificate certs/cloudflare_moe.cert; # managed by Certbot
