--- a/sites-available/git.erisa.moe.conf
+++ b/sites-available/git.erisa.moe.conf
@@ -18,7 +18,7 @@ server {
   add_header X-Robots-Tag none;
   
   location / {
-    return 301 https://erisa.link$request_uri;
+    return 301 https://erisa.moe$request_uri;
   }
 }
 
