--- a/sites-available/erisa.link.conf
+++ b/sites-available/erisa.link.conf
@@ -19,9 +19,14 @@ server {
   # MUST BE EDITED TO REFLECT YOUR CONFIGURATION
   root /var/www/yourls;
 
+  location @redir {
+    return 302 https://erisa.moe;
+  }
+  
   # Rewrites
   location / {    
     try_files $uri $uri/ /yourls-loader.php$is_args$args;
+    index @redir
   }
 
   # PHP engine
