--- a/sites-available/erisa.link.conf
+++ b/sites-available/erisa.link.conf
@@ -22,11 +22,11 @@ server {
   location @redir {
     return 302 https://erisa.moe;
   }
-  
+
   # Rewrites
   location / {    
     try_files $uri $uri/ /yourls-loader.php$is_args$args;
-    index @redir
+    index @redir;
   }
 
   # PHP engine
