--- a/sites-available/erisa.link.conf
+++ b/sites-available/erisa.link.conf
@@ -19,14 +19,14 @@ server {
   # MUST BE EDITED TO REFLECT YOUR CONFIGURATION
   root /var/www/yourls;
 
-  location @redir {
-    return 302 https://erisa.moe;
-  }
-
   # Rewrites
   location / {    
     try_files $uri $uri/ /yourls-loader.php$is_args$args;
-    index @redir;
+    index index.html;
+  }
+
+  location ~ /index\.html$ {
+    rewrite ^/index\.html$ http://erisa.moe temporary;
   }
 
   # PHP engine
