--- a/sites-available/erisa.link.conf
+++ b/sites-available/erisa.link.conf
@@ -23,10 +23,7 @@ server {
   location / {    
     try_files $uri $uri/ /yourls-loader.php$is_args$args;
     index index.html;
-  }
-
-  location ~ /index\.html$ {
-    rewrite ^/index\.html$ http://erisa.moe temporary;
+    rewrite ^/index\.html$ http://erisa.moe redirect;
   }
 
   # PHP engine
