Add redirect for erisa.games/evenfall

--- a/sites-available/erisa.games.conf
+++ b/sites-available/erisa.games.conf
@@ -14,5 +14,9 @@ server {
     root /var/www/erisa.games;
     error_page   404  =  /404.html;
   }
+
+  location /evenfall {
+    return 301 https://evenfall.site/$request_uri;
+  }
   
 }
