Fix oversight in erisa.games

--- a/sites-available/erisa.games.conf
+++ b/sites-available/erisa.games.conf
@@ -16,7 +16,7 @@ server {
   }
 
   location /evenfall {
-    return 301 https://evenfall.site/$request_uri;
+    return 301 https://evenfall.site/;
   }
   
 }
