Fix mistake in evenfall.site

--- a/sites-available/evenfall.site.conf
+++ b/sites-available/evenfall.site.conf
@@ -31,7 +31,7 @@ server {
   ssl_certificate certs/cloudflare_evenfall.cert;
   ssl_certificate_key keys/cloudflare_evenfall.key;
 
-  server_name www.erisa.moe;
+  server_name www.evenfall.site;
 
   include confs/reject_denied.conf;
   include confs/cloudflare_only.conf;
