Fix dumb mistake in evenfall.website

--- a/sites-available/evenfall.website.conf
+++ b/sites-available/evenfall.website.conf
@@ -12,7 +12,7 @@ server {
   include confs/cloudflare_only.conf;
   
   location / {
-    return 302 https://evenfall.website$request_uri;
+    return 302 https://evenfall.site$request_uri;
   }
 
 }
