--- a/sites-available/awau.uk.conf
+++ b/sites-available/awau.uk.conf
@@ -67,6 +67,9 @@ server {
     include confs/reject_denied.conf;
     include confs/cloudflare_only.conf;
     location / {
-        proxy_pass http://127.0.0.1:4180;
+        # proxy_pass http://127.0.0.1:4180;
+	root /var/www/w;        
+	try_files /index.html =404;
+        
     }
 }
