--- a/sites-available/erisa.moe.conf
+++ b/sites-available/erisa.moe.conf
@@ -16,10 +16,16 @@ server {
   
   location / {
     root /var/www/erisa.moe;
+    add_header Access-Control-Allow-Origin *;
   }
 
   location /.git/ {
    # Do nothing.
+  }
+  
+  location /LICENSE {
+   root /var/www/erisa.moe;
+   default_type text/plain;
   }
   
 }
