--- a/sites-available/erisa.link.conf
+++ b/sites-available/erisa.link.conf
@@ -23,7 +23,7 @@ server {
   location / {    
     try_files $uri $uri/ /yourls-loader.php$is_args$args;
     index index.html;
-    rewrite ^/index\.html$ http://erisa.moe redirect;
+    # rewrite ^/index\.html$ http://erisa.moe redirect;
   }
 
   # PHP engine
@@ -36,6 +36,14 @@ server {
     
     # MUST BE EDITED TO REFLECT YOUR CONFIGURATION
     fastcgi_pass unix:/var/run/php/php7.2-fpm.sock;
+  }
+
+  location /f {
+   proxy_pass https://eri.page.link/;
+   proxy_set_header Connection "";
+   proxy_set_header Host $host;
+   proxy_set_header X-Real-IP $remote_addr;
+   proxy_pass_header X-Transmission-Session-Id;
   }
 
 }
