--- a/sites-available/erisa.cloud.conf
+++ b/sites-available/erisa.cloud.conf
@@ -125,10 +125,10 @@ server {
     error_log       /var/log/nginx/seafdav.error.log;
   }
   
-  ssl_certificate /etc/letsencrypt/live/erisa.cloud/fullchain.pem; # managed by Certbot
-  ssl_certificate_key /etc/letsencrypt/live/erisa.cloud/privkey.pem; # managed by Certbot
-  include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
-  ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+  # ssl_certificate /etc/letsencrypt/live/erisa.cloud/fullchain.pem; # managed by Certbot
+  # ssl_certificate_key /etc/letsencrypt/live/erisa.cloud/privkey.pem; # managed by Certbot
+  # include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+  # ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
     
   # ssl_certificate /etc/nginx/cloudflare_cloud.cert;
   # ssl_certificate_key /etc/nginx/cloudflare_cloud.key;
