--- a/sites-available/erisa.cloud.conf
+++ b/sites-available/erisa.cloud.conf
@@ -130,7 +130,7 @@ server {
   # include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
   # ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
     
-  # ssl_certificate /etc/nginx/cloudflare_cloud.cert;
-  # ssl_certificate_key /etc/nginx/cloudflare_cloud.key;
+  ssl_certificate /etc/nginx/cloudflare_cloud.cert;
+  ssl_certificate_key /etc/nginx/cloudflare_cloud.key;
 
 }
