Fix erisa.cloud (again)

--- a/sites-available/erisa.cloud.conf
+++ b/sites-available/erisa.cloud.conf
@@ -131,6 +131,6 @@ server {
   # ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
     
   ssl_certificate certs/cloudflare_cloud.cert;
-  ssl_certificate_key certs/cloudflare_cloud.key;
+  ssl_certificate_key keys/cloudflare_cloud.key;
 
 }
