Add 404 to erisa.moe

--- a/sites-available/erisa.moe.conf
+++ b/sites-available/erisa.moe.conf
@@ -16,6 +16,7 @@ server {
   
   location / {
     root /var/www/erisa.moe;
+    error_page 404 /404.html;
     add_header Access-Control-Allow-Origin *;
   }
 
