Use text/markdown mime for md

--- a/sites-available/erisa.moe.conf
+++ b/sites-available/erisa.moe.conf
@@ -43,9 +43,9 @@ server {
   include confs/reject_denied.conf;
   include confs/cloudflare_only.conf;
 
-  # types {
-  #   text/plain        md;
-  # }
+  types {
+    text/markdown        md;
+  }
 
   location / {
     return 301 https://erisa.moe/;
