Add to the proper server too

--- a/sites-available/erisa.moe.conf
+++ b/sites-available/erisa.moe.conf
@@ -10,9 +10,9 @@ server {
   include confs/reject_denied.conf;
   include confs/cloudflare_only.conf;
 
-  # types {
-  #   text/plain        md;
-  # }
+  types {
+    text/plain        md;
+  }
   
   location / {
     root /var/www/erisa.moe;
