Markdown, not plain

--- a/sites-available/erisa.moe.conf
+++ b/sites-available/erisa.moe.conf
@@ -11,7 +11,7 @@ server {
   include confs/cloudflare_only.conf;
 
   types {
-    text/plain        md;
+    text/markdown        md;
   }
   
   location / {
