--- a/sites-available/erisa.moe.conf
+++ b/sites-available/erisa.moe.conf
@@ -10,9 +10,9 @@ server {
   include confs/reject_denied.conf;
   include confs/cloudflare_only.conf;
 
-  types {
-    text/markdown        md;
-  }
+  # types {
+  #   text/plain        md;
+  # }
   
   location / {
     root /var/www/erisa.moe;
@@ -43,9 +43,9 @@ server {
   include confs/reject_denied.conf;
   include confs/cloudflare_only.conf;
 
-  types {
-    text/markdown        md;
-  }
+  # types {
+  #   text/plain        md;
+  # }
 
   location / {
     return 301 https://erisa.moe/;
