--- a/sites-available/erisa.cloud.conf
+++ b/sites-available/erisa.cloud.conf
@@ -22,6 +22,7 @@ server {
   include confs/reject_denied.conf;
   include confs/banlist.conf;
   include confs/torlist.conf;
+  include confs/cloudflare_only.conf;
   
   proxy_set_header X-Forwarded-For $remote_addr;
 
