--- a/sites-available/erisa.cloud.conf
+++ b/sites-available/erisa.cloud.conf
@@ -41,6 +41,11 @@ server {
     error_log       /var/log/nginx/seahub.error.log;
   }
 
+  location /gateway  {
+    root /var/www;
+    index index.html;
+  }
+
   location /seafhttp {
     rewrite ^/seafhttp(.*)$ $1 break;
     proxy_pass http://127.0.0.1:8082;
