--- a/sites-available/erisa.link.conf
+++ b/sites-available/erisa.link.conf
@@ -12,7 +12,7 @@ server {
   # MUST BE EDITED TO REFLECT YOUR CONFIGURATION
   server_name erisa.link;
 
-  include confs/reject_denied.conf;
+  #include confs/reject_denied.conf;
   include confs/cloudflare_only.conf;
   
   # Root directory
@@ -38,12 +38,12 @@ server {
     fastcgi_pass unix:/var/run/php/php7.2-fpm.sock;
   }
 
-  location /f {
-   proxy_pass https://eri.page.link/;
-   proxy_set_header Connection "";
-   proxy_set_header Host $host;
-   proxy_set_header X-Real-IP $remote_addr;
-   proxy_pass_header X-Transmission-Session-Id;
-  }
+#  location /f {
+#   proxy_pass https://eri.page.link/;
+#   proxy_set_header Connection "";
+#   proxy_set_header Host $host;
+#   proxy_set_header X-Real-IP $remote_addr;
+#   proxy_pass_header X-Transmission-Session-Id;
+#  }
 
 }
