Proxy erisa.games through SCW Object Storage

--- a/sites-available/erisa.games.conf
+++ b/sites-available/erisa.games.conf
@@ -1,22 +1,38 @@
-server {
-  listen 443 ssl;
-  listen [::]:443 ssl;
-  
-  ssl_certificate certs/cloudflare_games.cert;
-  ssl_certificate_key keys/cloudflare_games.key;
-  
-  server_name erisa.games;
-  
-  include confs/reject_denied.conf;
-  include confs/cloudflare_only.conf;
-    
-  location / {
-    root /var/www/erisa.games;
-    error_page   404  =  /404.html;
-  }
+proxy_cache_path /var/tmp/nginx-cache levels=1:2 keys_zone=s3cache:10m max_size=2g;
 
-  location /evenfall {
-    return 302 https://evenfall.site/;
-  }
-  
+server {
+    listen [::]:443 ssl ipv6only=on;
+    server_name erisa.games;
+    ssl_certificate certs/cloudflare_games.cert;
+    ssl_certificate_key keys/cloudflare_games.key;
+
+    include confs/cloudflare_only.conf;
+
+    location / {
+      rewrite  ^/$  /index.html  last;
+      rewrite  ^/GloryQuest$  /GloryQuest/  redirect;
+      rewrite  ^/GloryQuest2$  /GloryQuest2/  redirect;
+
+      rewrite  ^/GloryQuest/$  /GloryQuest/index.html  last;
+      rewrite  ^/GloryQuest2/$  /GloryQuest2/index.html  last;
+
+      include confs/proxy_params.conf;
+      s3_bucket erisa.games;
+
+      # It doesn't seem to matter what you put here.
+      # Using nested subdomains (erisa.games.*) seems to break its SSl so
+      #  we just use any subdomain and set the Host manually to bypass that.
+      proxy_pass https://erisa.s3.fr-par.scw.cloud;
+      proxy_set_header Host "erisa.games.s3.fr-par.scw.cloud";
+      proxy_intercept_errors on;
+      error_page 404 /404-games.html;
+      
+    }
+
+    location = /404-games.html {
+      proxy_set_header Authorization "";
+      proxy_set_header x-amz-date "";
+      proxy_pass https://erisa-static.s3.fr-par.scw.cloud;
+    }
+
 }
