--- a/sites-available/erisa.cloud.conf
+++ b/sites-available/erisa.cloud.conf
@@ -80,8 +80,32 @@ server {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
   }
 
-  location /seafdav {
-    fastcgi_pass    127.0.0.1:8081;
+    location /seafdav {
+
+        proxy_pass         http://127.0.0.1:8081/seafdav;
+
+        proxy_set_header   Host $host;
+
+        proxy_set_header   X-Real-IP $remote_addr;
+
+        proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+
+        proxy_set_header   X-Forwarded-Host $server_name;
+
+        proxy_set_header   X-Forwarded-Proto $scheme;
+
+        proxy_read_timeout  1200s;
+
+        client_max_body_size 0;
+
+
+        access_log      /var/log/nginx/seafdav.access.log;
+        error_log       /var/log/nginx/seafdav.error.log;
+
+    }
+
+  location /seafdavold {
+    fastcgi_pass    127.0.0.1:8080;
     fastcgi_param   SCRIPT_FILENAME     $document_root$fastcgi_script_name;
     fastcgi_param   PATH_INFO           $fastcgi_script_name;
     fastcgi_param   SERVER_PROTOCOL     $server_protocol;
