--- a/erisa-available/awau.uk.conf
+++ b/erisa-available/awau.uk.conf
@@ -51,7 +51,7 @@ server {
     client_max_body_size 50M;
     server_name awau.uk;
     location / {
-        root /var/www/no;
+        root /var/www/awau.uk;
     }
     location ~ ^/(\.well_known|nodeinfo|api|emojis|avatars|splashes|banners|embed|app-icons|channel-icons|icons|store|attachments) {
         proxy_pass http://localhost:5000;
@@ -68,7 +68,7 @@ server {
     include confs/cloudflare_only.conf;
     location / {
         # proxy_pass http://127.0.0.1:4180;
-        root /var/www/w;        
+        root /var/www/w;
         try_files /index.html =404;
     }
 }
