Add awau.uk matrix homeserver and riot

--- a/erisa-available/awau.uk.conf
+++ b/erisa-available/awau.uk.conf
@@ -56,6 +56,25 @@ server {
     location ~ ^/(\.well_known|nodeinfo|api|emojis|avatars|splashes|banners|embed|app-icons|channel-icons|icons|store|attachments) {
         proxy_pass http://localhost:5000;
     }
+
+    location /_matrix {
+        proxy_pass http://localhost:8008;
+        proxy_set_header X-Forwarded-For $remote_addr;
+    }
+}
+
+server {
+    listen 443 ssl;
+    listen [::]:443;
+    ssl_certificate certs/cloudflare_awau.cert;
+    ssl_certificate_key keys/cloudflare_awau.key;
+    server_name riot.awau.uk;
+    include confs/reject_denied.conf;
+    include confs/cloudflare_only.conf;
+    
+    location / {
+        root /var/www/riot.awau.uk;
+    }
 }
 
 server {
